--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </section>
         <!-- My Work -->
         <section class="my-work" id="work">
-            <h2 class="section__title">Mis Trabajos</h2>
-            <p class="section__subtitle">Estos son algunos de mis Trabajos ya realizados: </p>
+            <h2 class="section__title section__title--work">Mis Trabajos</h2>
+            <p class="section__subtitle section__subtitle--work">Estos son algunos de mis Trabajos ya realizados: </p>
 
             <div class="portfolio">
                 <!-- Portfolio item 01 -->
