--- a/naturox.html
+++ b/naturox.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel = "icon" href = "img/logo_tab.png" type = "image/x-icon">
         <title>Alphatech Solutions</title>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
@@ -19,7 +20,9 @@
     <body>
         <header>
             <div class="logo">
-                <img src="img/alphatech2.png" alt="" >
+                <a href="index.html" class="portfolio__item">
+                    <img src="./img/alphatech1.png" alt="" class="portfolio__img">
+                </a>
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger">
@@ -43,17 +46,20 @@
         <!-- Info -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                The title <strong>of my project</strong> 
+                Website for <strong>Naturox</strong> 
             </h1>
-            <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-            <img src="img/trabajo1.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">Terapias alternativas</p>
+            <img src="img/naturox.jpg" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p></p>
-                <img src="img/services.png" alt="">
-            <p></p>
-            <p></p>
+            <p>Naturox gives Homeopatic and alternative therapy services.</p>
+
+            <a href="https://andresdoig0711.github.io/naturox/" class="portfolio__item">
+                <img src="./img/trabajo1.PNG" alt="" class="portfolio__img">
+            </a>
+            <p>This project was created for our client so that she can show her services to the patients.</p>
+            <p>Direct contact links and pricing information displayed for the patients to get in contact with our clients busines. </p>
         </div>
 
 
