changed ceo image

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
             <div class="about-me__body">
                 <p>I am a Software Engineering student. I am starting my specialization in iOS development.</p>
                 <p>I also have experience with C, C++ and Python.</p>
+                <p>The first projects of our company were some simple Websites for our clients, written in HTML, CSS and JavaScript.</p>
                 
             </div>
-            <img src="img/FOTO.jpg" alt="foto andres" class="about-me__img">
+            <img src="img/ProfilePictureMaker(2).png" alt="foto andres" class="about-me__img">
         </section>
         <!-- My Work -->
         <section class="my-work" id="work">
@@ -98,11 +99,7 @@
                 <a href="naturox.html" class="portfolio__item">
                     <img src="./img/naturox.jpg" alt="" class="portfolio__img">
                 </a>
-                <!-- Portfolio item 01 -->
-                <a href="naturox.html" class="portfolio__item">
-                    <img src="./img/naturox.jpg" alt="" class="portfolio__img">
-                </a>
-                
+
             </div>
         </section>
 
